eks/cluster-karpenter/test_deployment/empty.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name empty-spot-1-1
  labels: &labels
    app: *name
    version: &version v2
spec:
  replicas: 4
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      terminationGracePeriodSeconds: 1
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector: &labelSelector
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - *name
                  - key: version
                    operator: In
                    values:
                      - *version
              topologyKey: kubernetes.io/hostname
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "topology.kubernetes.io/zone"
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            <<: *labelSelector
      containers:
        - name: default
          image: alpine:latest
          command: [ "sleep", "infinity" ]
      nodeSelector:
        role: app
