eks/cluster-karpenter/test_deployment/empty_1-1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name empty-spot-1-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: *name
      version: v2
  template:
    metadata:
      labels:
        app: *name
        version: v2
    spec:
      terminationGracePeriodSeconds: 1
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector: &labelSelector
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - *name
                  - key: version
                    operator: In
                    values:
                      - v2
              topologyKey: kubernetes.io/hostname
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "capacity-spread-1-1"
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            <<: *labelSelector
        - maxSkew: 1
          topologyKey: "topology.kubernetes.io/zone"
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            <<: *labelSelector
      containers:
        - name: default
          image: alpine:latest
          command: [ "sleep", "infinity" ]
      nodeSelector:
        role: app
