eks/cluster-karpenter/test_deployment/empty_test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &name nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: *name
      release: latest
  template:
    metadata:
      labels:
        app: *name
        release: latest
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: default
          image: nginx:alpine-slim
          ports:
            - containerPort: 80
              name: http-web
        - name: istio-proxy
          image: auto
          lifecycle:
            preStop:
              exec:
                command: ["sleep", "10"]
---
apiVersion: v1
kind: Service
metadata:
  name: &name nginx
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http-web
      name: http
  selector:
    app: *name
    release: latest
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: &name nginx
spec:
  hosts:
    - 'nginx.default.svc.cluster.local'
  gateways:
    - 'mesh'
  http:
    - name: v1
      match:
        - uri:
            prefix: '/v1/api/'
      rewrite:
        uri: '/'
      route:
        - destination:
            host: nginx.default.svc.cluster.local
    - name: v2
      match:
        - uri:
            prefix: '/v2/api/'
      rewrite:
        uri: '/'
      route:
        - destination:
            host: nginx.default.svc.cluster.local
    - directResponse:
        status: 404
        body:
          string: "No matching request found"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx
spec:
  host: nginx.default.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
  subsets:
    - name: v1
      labels:
        app: nginx
